--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3'
+version: '3.1'
 
 services:
-  api-solid-pg:
-    image: bitnami/postgresql:latest
+  database:
+    image: mysql:latest
     ports:
-      - 5432:5432
+      - 3306:3306
     environment:
-      - POSTGRES_USERNAME=docker
-      - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=api-solid
+      - MYSQL_ROOT_PASSWORD=docker
+      - MYSQL_DATABASE = api-healthy-plan
