--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
+    "migration:deploy": "prisma migrate deploy",
     "test:unit": "vitest run",
     "test:e2e": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
-  },
-  "prisma": {
-    "schema": "prisma/models/schema.prisma"
   },
   "keywords": [],
   "author": "",
@@ -35,7 +33,10 @@
     "vitest": "0.34.1"
   },
   "dependencies": {
+    "@fastify/swagger": "8.9.0",
+    "@fastify/swagger-ui": "1.9.3",
     "@prisma/client": "5.1.0",
+    "@types/swagger-ui": "3.52.0",
     "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
