--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
-    "migration:deploy": "prisma migrate deploy",
+    "prisma:generate": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
     "test:unit": "vitest run",
     "test:e2e": "vitest run",
     "test:watch": "vitest",
