--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prisma:dev": "prisma migrate dev --name default",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
+    "test": "vitest run",
     "test:unit": "vitest run",
     "test:e2e": "vitest run",
     "test:watch": "vitest",
