--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vitest": "0.34.1"
   },
   "dependencies": {
+    "@fastify/cors": "8.3.0",
     "@fastify/jwt": "7.2.0",
     "@fastify/swagger": "8.9.0",
     "@fastify/swagger-ui": "1.9.3",
