--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsup src --out-dir build",
     "start": "node build/server.js",
     "prisma:generate": "prisma generate",
-    "prisma:dev": "prisma migrate dev --name default",
+    "prisma:dev": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "test": "vitest run",
