--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "GymPass style app",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsup src --out-dir build",
@@ -11,10 +12,13 @@
     "prisma:dev": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
-    "test": "vitest run",
-    "test:unit": "vitest run",
-    "test:e2e": "vitest run",
-    "test:watch": "vitest",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "test": "vitest run --dir src/tests/unit",
+    "test:unit": "vitest run --dir src/tests/unit",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/tests/e2e",
+    "test:watch": "vitest run --dir src/tests/e2e",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -24,12 +28,15 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.6",
+    "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "6.2.1",
     "@typescript-eslint/parser": "6.2.1",
     "@vitest/coverage-v8": "0.34.1",
     "@vitest/ui": "0.34.1",
     "eslint": "8.46.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.1.0",
+    "supertest": "6.3.3",
     "tsup": "7.2.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
@@ -37,6 +44,7 @@
     "vitest": "0.34.1"
   },
   "dependencies": {
+    "@fastify/cookie": "9.0.4",
     "@fastify/cors": "8.3.0",
     "@fastify/jwt": "7.2.0",
     "@fastify/swagger": "8.9.0",
