--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=mysql://root:docker@localhost/api-healthy-plan
+DATABASE_URL=postgresql://root:docker@localhost:5432/api-healthy-plan
 JWT_SECRET=secret
 PORT=3000
