--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "prisma:deploy": "prisma migrate deploy",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
-    "test": "vitest run --dir src/tests/unit",
-    "test:unit": "vitest run --dir src/tests/unit",
+    "test": "vitest run --dir src/__tests__/unit",
+    "test:unit": "vitest run --dir src/__tests__/unit",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
-    "test:e2e": "vitest run --dir src/tests/e2e",
-    "test:watch": "vitest run --dir src/tests/e2e",
+    "test:e2e": "vitest run --dir src/__tests__/e2e",
+    "test:watch": "vitest run --dir src/__tests__/e2e",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
