--- a/prisma/vitest-environment-prisma/package.json
+++ b/prisma/vitest-environment-prisma/package.json
@@ -2,10 +2,7 @@
   "name": "vitest-environment-prisma",
   "version": "1.0.0",
   "description": "",
-  "main": "prisma-test-environment.js",
-  "scripts": {
-    "build": "tsc prisma-test-environment.ts"
-  },
+  "main": "prisma-test-environment.ts",
   "keywords": [],
   "author": "",
   "license": "ISC"
