--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=postgresql://root:docker@localhost:5432/api-healthy-plan
+DATABASE_URL="postgresql://root:docker@localhost:5432/api-healthy-plan?schema=public"
 JWT_SECRET=secret
 PORT=3000
