--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -23,10 +23,11 @@ jobs:
         with:
           node-version: '18.x'
           cache: 'npm'
-      
+
       - run: npm ci
 
-      - run: npm run test:e2e
+      - run: npm run test
+    #   - run: npm run test:e2e
         env:
           JWT_SECRET: secret
           DATABASE_URL: "mysql://root:docker@localhost/api-healthy-plan"
