--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:e2e": "vitest run -c vitest.e2e.config.ts",
     "test:e2e:watch": "vitest -c vitest.e2e.config.ts",
     "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "sonar:scanner": "sonar-scanner"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +36,7 @@
     "eslint": "8.46.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.1.0",
+    "sonarqube-scanner": "3.0.1",
     "supertest": "6.3.3",
     "tsup": "7.2.0",
     "tsx": "3.12.7",
