--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,6 @@
       "sourceType": "module",
       "project": "./tsconfig.json"
     },
-    "defaultSeverity": "warn",
     "env": {
       "node": true,
       "es6": true
@@ -22,9 +21,9 @@
       "linebreak-style": ["warn", "unix"],
       "quotes": ["warn", "double"],
       "semi": ["warn", "always"],
-      "no-unused-vars": ["warn", "true"],
-      "no-console": ["warn", "off"],
-      "@typescript-eslint/no-unused-vars": ["warn", "true"],
-      "@typescript-eslint/no-explicit-any": ["warn", "off"]
+      "no-unused-vars": ["warn", { "args": "none" }],
+      "no-console": "warn",
+      "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
+      "@typescript-eslint/no-explicit-any": "warn"
     }
-  }
+}
