--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "test:e2e:watch": "vitest -c vitest.config.ts",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "sonar:scanner": "sonar-scanner"
+    "sonar:scanner": "sonar-scanner",
+    "lint": "eslint src --fix",
+    "test:load": "artillery run -o src/__tests__/load/results.json src/__tests__/load/artillary-conf.yml",
+    "postest:load": "artillery report -o src/__tests__/load/results.html src/__tests__/load/results.json"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +36,7 @@
     "@typescript-eslint/parser": "6.2.1",
     "@vitest/coverage-v8": "0.34.1",
     "@vitest/ui": "0.34.1",
+    "artillery": "2.0.0-36",
     "eslint": "8.46.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.1.0",
