--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -36,5 +36,5 @@ jobs:
     #   - run: npm run test:e2e
         env:
           JWT_SECRET: secret
-          DATABASE_URL: postgresql://root:docker@database:5432/api-healthy-plan
-          CACHE_URL: "redis://cache:6379"
+          DATABASE_URL: postgresql://root:docker@localhost:5432/api-healthy-plan
+          CACHE_URL: "redis://localhost:6379"
