--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Informação do projeto
-sonar.projectKey=meu_projeto_typescript
-sonar.projectName=Meu Projeto TypeScript
+sonar.projectKey=Healthy Plan API
+sonar.projectName=Healthy Plan API
 sonar.projectVersion=1.0
 
 # Caminho para o diretório raiz do projeto
