--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -32,8 +32,7 @@ jobs:
 
       - run: npm ci
 
-      - run: npm run test
-    #   - run: npm run test:e2e
+      - run: npm run test:e2e
         env:
           JWT_SECRET: secret
           DATABASE_URL: postgresql://root:docker@localhost:5432/api-healthy-plan
