--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: '18.x'
           cache: 'npm'
-      
+
       - run: npm ci
 
-      - run : npm run test
+      - run : npm run test:unit
