--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
       "no-unused-vars": ["warn", { "args": "none" }],
       "no-console": "warn",
       "@typescript-eslint/no-unused-vars": ["warn", { "args": "none" }],
-      "@typescript-eslint/no-explicit-any": "warn"
+      "@typescript-eslint/no-explicit-any": "warn",
+      "@typescript-eslint/no-empty-function": "off"
     }
 }
