--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curso",
+  "name": "healthy-plan-api",
   "version": "1.0.0",
   "description": "Healthy Plan API",
   "main": "index.js",
@@ -28,12 +28,12 @@
     "test:load:view": "artillery report -o load_tests/results.html load_tests/results.json"
 },
 "keywords": [],
-  "author": "",
+  "author": "Lucas Lima",
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^20.4.6",
-    "@types/pdfmake": "0.2.2",
+    "@types/pdfmake": "^0.2.2",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
@@ -62,7 +62,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.21.0",
-    "pdfmake": "0.2.7",
+    "pdfmake": "^0.2.7",
     "redis": "^4.6.8",
     "zod": "^3.21.4"
   }
