--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -25,10 +25,8 @@ jobs:
           node-version: '18.x'
           cache: 'npm'
 
-      - run: npm ci
+      - run: npm i
 
       - run: npm run test:e2e
         env:
-          JWT_SECRET: secret
           DATABASE_URL: postgresql://root:docker@database:5432/api-healthy-plan
-          CACHE_URL: "redis://redis:6379"
