--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -15,6 +15,6 @@ jobs:
           node-version: '18.x'
           cache: 'npm'
 
-      - run: npm ci
+      - run: npm i
 
       - run : npm run test:unit
