--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: '18.x'
           cache: 'npm'
 
-      - run: npm i --production=false
+      - run: npm i --production=false --no-cache
 
       - run: npm run test:e2e
         env:
