--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -26,7 +26,8 @@ jobs:
           cache: 'npm'
 
       - run: npm ci
-
+      - run: run prisma:generate
+      - run: run prisma:deploy
       - run: npm run test:e2e
         env:
           DATABASE_URL: postgresql://root:docker@database:5432/api-healthy-plan
