--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -1,6 +1,9 @@
 name: Run Unit Tests
-
-on: [push]
+on:
+    push:
+      branches:
+        - main
+        - dev
 
 jobs:
 
@@ -13,7 +16,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '18.x'
-          cache: 'npm'
+        #   cache: 'npm'
 
       - run: npm ci
 
