--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -1,6 +1,10 @@
 name: Run E2E Tests
 
-on: [push]
+on:
+    push:
+      branches:
+        - main
+        - dev
 
 jobs:
 
@@ -21,13 +25,15 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: actions/setup-node@v3
+        env:
+            DATABASE_URL: postgresql://root:docker@database:5432/api-healthy-plan
         with:
           node-version: '18.x'
-          cache: 'npm'
-
+        #   cache: 'npm'
       - run: npm ci
+
       - run: npm run prisma:generate
+
       - run: npm run prisma:deploy
+      
       - run: npm run test:e2e
-        env:
-          DATABASE_URL: postgresql://root:docker@database:5432/api-healthy-plan
