--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "lint": "eslint src --fix",
     "test:load": "artillery run -o load_tests/results.json load_tests/artillary-conf.yml",
     "test:load:view": "artillery report -o load_tests/results.html load_tests/results.json"
-},
-"keywords": [],
+  },
+  "keywords": [],
   "author": "Lucas Lima",
   "license": "ISC",
   "devDependencies": {
@@ -62,6 +62,7 @@
     "@types/swagger-ui": "^3.52.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
+    "excel4node": "1.8.2",
     "fastify": "^4.21.0",
     "pdfmake": "^0.2.7",
     "redis": "^4.6.8",
