--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "test:unit": "vitest run -c vite.config.ts",
     "test:watch": "vitest -c vite.config.ts",
-    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "prettest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run -c vitest.config.ts",
     "test:e2e:watch": "vitest -c vitest.config.ts",
     "test:coverage": "vitest run --coverage",
