--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@fastify/cookie": "^9.0.4",
     "@fastify/cors": "^8.3.0",
     "@fastify/jwt": "^7.2.0",
+    "@fastify/static": "^6.11.2",
     "@fastify/swagger": "^8.9.0",
     "@fastify/swagger-ui": "^1.9.3",
     "@prisma/client": "^5.1.0",
