--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "@fastify/cookie": "^9.1.0",
     "@fastify/cors": "^8.4.0",
+    "@fastify/helmet": "^11.1.1",
     "@fastify/jwt": "^7.2.2",
     "@fastify/static": "^6.11.2",
     "@fastify/swagger": "^8.11.0",
