--- a/tsconfig.json
+++ b/tsconfig.json
@@ -118,12 +118,10 @@
   },
   "include": [
     "src/**/*.ts",
-    "__tests__/**/*.ts",
-    "./"
+    "__tests__/**/*.ts"
   ],
     "exclude": [
         "node_modules",
-        "**/*.spec.ts",
-        "./tsconfig.json"
+        "**/*.spec.ts"
     ]
 }
